[package]
name = "claude-stream-format"
version = "0.1.0"
edition = "2021"
description = "Format Claude Code's stream-json output into human-readable text"
license = "MIT"
authors = ["Jeremy Wells"]
repository = "https://github.com/jemmyw/claude-stream-format"
keywords = ["claude", "cli", "formatter", "streaming"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
